22.4 WebRTC SDK Correction: - Wrap #renderer into container and manipulate CSS from here

--- a/VidyoConnector.css
+++ b/VidyoConnector.css
@@ -23,12 +23,21 @@ html, body {
 	position: absolute;
 	z-index:  100;
 }
-#renderer {
-	position: absolute;
-	top:      0px;
-	right:    0px;
-	bottom:   60px;
-	z-index:  99;
+.renderer-container {
+	display:      flex;
+	position:     absolute;
+	top:          0px;
+	right:        0px;
+	bottom:       60px;
+	z-index: 99;
+	transition: left 0.5s;
+	-moz-transition: left 0.5s;
+	-webkit-transition: left 0.5s;
+}
+.renderer-container #renderer {
+	width: 100%;
+	height: 100%;
+	background-color: rgb(47, 47, 47);
 }
 #helper {
 	position:    absolute;
